--- a/Application/Home/View/News/newslist.html
+++ b/Application/Home/View/News/newslist.html
@@ -3,6 +3,7 @@
 <head>
     <script src="__PUBLIC__/js/jquery.min.js"></script>
 <link href="__PUBLIC__/css/css.css" rel="stylesheet" type="text/css">
+<link href="__PUBLIC__/css/listpage.css" rel="stylesheet" type="text/css">
 <link href="__PUBLIC__/css/nav.css" rel="stylesheet" type="text/css">
 
 </style>
@@ -17,11 +18,23 @@
         	<img src="__PUBLIC__/images/newsbanner.png">   
         </div>
     </div>
-    <div class="mainbox">
-    	<div class="main">
+    <div class="infolist-main">
             <div class="leftmain">
                 <div class="mainlefttitle"><img src="__PUBLIC__/images/news_03.png"></div>
-                <div class="mainbtn"></div>
+                <div class="mainbtn">
+                    <div class="navlist active">
+                        <a href="#">信息咨询</a>
+                    </div>
+                     <div class="navlist">
+                        <a href="#">政策法规</a>
+                    </div>
+                    <div class="navlist">
+                        <a href="#">市场动态</a>
+                    </div>
+                    <div class="navlist">
+                        <a href="#">业内资讯</a>
+                    </div>
+                </div>
             </div>
             <div class="rightmain">
             	<div class="rightmaintitle">
@@ -38,9 +51,6 @@
                         <p>&nbsp;>&nbsp;</p>
                         <a href="">行业动态</a>
                     </div>
-                </div>
-                <div class="line2"></div>
-                <div class="line2"></div>
                 <div class="mainbottom"></div>
             </div>
     	</div>
