--- a/Application/Home/View/Public/nav.html
+++ b/Application/Home/View/Public/nav.html
@@ -38,7 +38,7 @@
                     <a href="#">市场动态</a>
                 </p>
                 <p >
-                    <a href="#">业内咨询</a>
+                    <a href="#">业内资讯</a>
                 </p>
             </div>
         </div>
