--- a/Application/Home/View/Result/resultlist.html
+++ b/Application/Home/View/Result/resultlist.html
@@ -4,6 +4,8 @@
 <script src="__PUBLIC__/js/jquery.min.js"></script>
 <link href="__PUBLIC__/css/css.css" rel="stylesheet" type="text/css">
 <link rel="stylesheet" href="__PUBLIC__/css/nav.css">
+<link href="__PUBLIC__/css/listpage.css" rel="stylesheet" type="text/css">
+
 </style>
 <meta charset="utf-8">
 <title>张家港工程项目协同创新服务平台</title>
@@ -12,32 +14,60 @@
 <body>
     <include file="Public/nav" />
     <div class="bannerbox">
-    	<div class="banner">
-        	<img src="__PUBLIC__/images/casebanner.png">   
-        </div>
+        <img src="__PUBLIC__/images/casebanner.png">
     </div>
-    <div class="mainbox">
-    	<div class="main">
-            <div class="leftmain">
-                <div class="mainlefttitle"><img src="__PUBLIC__/images/case_03.png"></div>
-                <div class="mainbtn"></div>
-            </div>
-            <div class="rightmain">
-            	<div class="rightmaintitle">
-                	<div class="rightmaintitleleft">
-                        <img src="__PUBLIC__/images/download_09.png">
-                        <h1>最新成果</h1>
-                    </div>
-                    <div class="rightmaintitleright">
-                    	<img src="__PUBLIC__/images/download_06.png">
-                        <p>您的位置：</p>
-                        <a href="index.html">首页</a>
-                        <p>&nbsp;>科技成果</p>
-                    </div>
+    <div class="infolist-main">
+        <div class="leftmain">
+            <div class="mainlefttitle"><img src="__PUBLIC__/images/case_03.png"></div>
+            <div class="mainbtn">
+                 <div class="navlist active">
+                    <a href="{:U('Team/teamlist')}">科技成果</a>
                 </div>
-                <div class="line2"></div>
-                <div class="mainimage"></div>
-                <div class="mainbottom"></div>
+            </div>
+        </div>
+        <div class="rightmain">
+        	<div class="top-tip">
+            	<div id="page-title">
+                    <img src="__PUBLIC__/images/download_09.png">
+                    <h1>最新成果</h1>
+                </div>
+                <div id="position">
+                	<img src="__PUBLIC__/images/download_06.png">
+                    <p>您的位置：</p>
+                    <a href="__ROOT__">首页</a>
+                    <p>&nbsp;>科技成果</p>
+                </div>
+            </div>
+            <div class="info-type">
+                <span style="font-size:16px;">需求类型：</span>
+                <a href="{:U('Result/resultlist')}">全部</a>&nbsp;&nbsp;
+                <a href="{:U('Result/resultlist',array('type' => 1))}">电子信息</a>&nbsp;&nbsp;
+                <a href="{:U('Result/resultlist',array('type' => 2))}">机械设计与制造</a>&nbsp;&nbsp;
+                <a href="{:U('Result/resultlist',array('type' => 3))}">新能源与环保</a>&nbsp;&nbsp;
+                <a href="{:U('Result/resultlist',array('type' => 4))}">生物技术与医药</a>&nbsp;&nbsp;
+                <a href="{:U('Result/resultlist',array('type' => 5))}">新材料</a>&nbsp;&nbsp;
+                <a href="{:U('Result/resultlist',array('type' => 6))}">现代农业</a>&nbsp;&nbsp;
+                <a href="{:U('Result/resultlist',array('type' => 1))}">其他</a>
+            </div>
+            <hr />
+               <volist id="list" name="list">
+                   <div class="info-list <?php if($i % 2 == 0) echo ' grey';?>">
+                       <div class="info-title" >
+                            <span>
+                                <a href="{:U('Result/result',array('id'=>$list['research_id'],'owner'=>$list['owner_id'],'team'=>$list['isteam']))}" title="{$list.title}">
+                                    {$list.research_name}&nbsp;&nbsp;
+                                </a>
+                            </span>
+                            <span>&nbsp;{$list.publish_time}</span>
+                            <a href="{:U('Public/link')}">
+                                <img id="linkbutton" src="__PUBLIC__/images/linkbutton.jpg">
+                            </a>
+                            
+                       </div>                           
+                   </div>
+               </volist>                
+            <div class="mainbottom">
+                {$page}
             </div>
         </div>
     </div>
