--- a/Application/Home/View/Team/team.html
+++ b/Application/Home/View/Team/team.html
@@ -16,9 +16,9 @@
     <div class="main">
         <img src="__PUBLIC__/images/download_06.png">
         <span>您的位置：</span>
-        <a href="index.html">首页</a>
+        <a href="__ROOT__">首页</a>
         <span>></span>
-        <a href="">专家团队</a>
+        <a href="{:U('Team/teamlist')}">专家团队</a>
         <span>>&nbsp;团队信息</span>
         
         <h3 class="caption">团队信息 >> <sapn class="research_title">团队名</sapn></h3>
@@ -55,8 +55,7 @@
             </tr>
             <tr>
                 <td colspan="2" class="link_img">
-                    <img src="/" alt="点击收藏">
-                    <img src="/" alt="我要联系">
+                    <img src="__PUBLIC__/images/linkbutton.jpg" alt="我要联系">
                 </td>
             </tr>
         </table>
@@ -86,20 +85,21 @@
                 <tr>
                     <td class="tip">队长</td>
                     <td class="owner_info">********</td>
-                    <td class="tip">职称</td>
+                    <td class="tip" rowspan="6">职称</td>
+
+                    <!-- <td class="tip" rowspan="{$team.teamNum}+1">职称</td> -->
                     <td class="owner_info">********</td>
                 </tr>
                 <tr>
+                    <!-- <td class="tip" rowspan="{team.teamNum}">队员</td> -->
                     <td class="tip" rowspan="5">队员</td>
                 </tr>
                 <tr>
                     <td class="owner_info">********</td>
-                    <td class="tip">职称</td>
                     <td class="owner_info">********</td>
                 </tr>
                 <tr>
                     <td class="owner_info">********</td>
-                    <td class="tip">职称</td>
                     <td class="owner_info">********</td>
                 </tr>
             </table>
