--- a/Public/css/nav.css
+++ b/Public/css/nav.css
@@ -70,34 +70,45 @@ a{
 	font-size: 16px;
 	line-height: 30px;
 }
-.footerbox{ 
+#footerbox{ 
 	width: 100%;
 	background-image:url(../images/footerbackground.png);
 }
-.footer{
+#footer{
 	width:1000px;
 	margin-left:auto; 
 	margin-right:auto; 
 	overflow:hidden;
 }
-.footerlist{ 
-	width:126px; 
-	height:217px; 
+#footerlist{ 
+	width:120px; 
+	height:170px; 
 	float:left;
 }
-.footerlist a h1{ 
+#footerlist a h1{ 
 	font-size:16px; 
 	color:#666; 
 	margin-top:30px; 
 	margin-bottom:20px; 
 	line-height:16px;
 }
-.footerlist a p{
+#footerlist a p{
 	color:#666; 
 	line-height:22px;
 }
-.footer img{ 
+#footer img{ 
 	margin-top:27px; 
 	float:right; 
 	margin-left:15px;
+}
+#bottombox{
+	width: 100%;
+}
+#bottom{
+	width: 1100px;
+	margin: 0 auto;
+	text-align: center;
+}
+#bottom p{
+	font-size: 12px;
 }
